--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,25 @@
 buildscript {
 
     repositories {
+        mavenCentral()
         jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-
+        classpath 'com.android.tools.build:gradle:3.2.0-beta01'
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha16'
-        classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
+        google()
     }
 }
 
