--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.android.tools.build:gradle:3.2.0-beta01'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -26,11 +26,11 @@ allprojects {
 }
 
 ext {
-    compileSdkVersion = 27
-    buildToolsVersion = "27.0.3"
-    minSdkVersion = "9"
-    targetSdkVersion = "27"
-    versionName = "1.0"
-    versionCode = 1
-    supportVersion = "27.1.1"
+    compileSdkVersion = 28
+    buildToolsVersion = "28.0.3"
+    minSdkVersion = 9
+    targetSdkVersion = 28
+    versionName = "1.0.0.1"
+    versionCode = 2
+    supportVersion = "28.0.0"
 }
