--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
@@ -28,9 +28,9 @@ allprojects {
 ext {
     compileSdkVersion = 28
     buildToolsVersion = "28.0.3"
-    minSdkVersion = 9
+    minSdkVersion = 11
     targetSdkVersion = 28
-    versionName = "1.0.0.1"
+    versionName = "1.0.0.1-local40"
     versionCode = 2
     supportVersion = "28.0.0"
 }
