--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ ext {
     buildToolsVersion = "28.0.3"
     minSdkVersion = 11
     targetSdkVersion = 28
-    versionName = "1.0.0.1-local43"
+    versionName = "1.0.1"
     versionCode = 2
     supportVersion = "28.0.0"
 }
