Class name is KuickDb instead of SQLiteDatabase

--- a/gdatabase/src/main/AndroidManifest.xml
+++ b/gdatabase/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest
-    package="com.genonbeta.android.database">
+<manifest package="com.genonbeta.android.database">
 
     <application/>
 
