--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ ext {
     buildToolsVersion = "29.0.2"
     minSdkVersion = 11
     targetSdkVersion = 29
-    versionName = "1.0.3.1"
-    versionCode = 9
+    versionName = "1.0.3.2-local4"
+    versionCode = 10
     supportVersion = "28.0.0"
 }
