--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
@@ -30,7 +30,7 @@ ext {
     buildToolsVersion = "29.0.2"
     minSdkVersion = 11
     targetSdkVersion = 29
-    versionName = "1.0.3.2-local8"
+    versionName = "1.0.4"
     versionCode = 10
     supportVersion = "28.0.0"
 }
